hphp/test/zend/good/ext/spl/tests/bug54971.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded('dom')) die("skip this test needs --enable-dom");
}
