hphp/test/zend/bad/ext/sqlite3/tests/bug63921-32bit.php.skipif
<?php
if (!extension_loaded('sqlite3')) die('skip');
if (PHP_INT_SIZE > 4) die('skip'); // skip for 64bit builds - there is another test for that
?>